@@ -1,6 +1,11 @@
+log_filter 7.x-1.0.x, 2013-02-05
+--------------------------------
+* Finished message box; .showAll() working, and fully documented.
+
 log_filter 7.x-1.0.x, 2013-02-03
 --------------------------------
 * Frontend now uses inspect.errorHandler().
+* Implemented message box.
 
 log_filter 7.x-1.0.x, 2013-02-02
 --------------------------------
